# similar_playground

./: CHAGELOG.md  Cargo.toml  README.md  index.html  justfile
docs/: index.html  similar_playground-44cf543d0036e33a.js  similar_playground-44cf543d0036e33a_bg.wasm
src/: main.rs
